[gd_scene load_steps=2 format=3 uid="uid://0ve5q5brp1ci"]

[ext_resource type="Script" path="res://Resources/BattlePhase/Scenes/MissionInfoPanel.gd" id="1_script"]

[node name="MissionInfoPanel" type="PanelContainer"]
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SourceLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Source: Promising Lead"

[node name="ConditionsList" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Special Conditions: None."
fit_content = true

[node name="DeploymentLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Deployment Type:
Standard."

[node name="TerrainList" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Suggested Terrain:
- 1x Large Building
- 3x Linear Barriers
- 1x Large Terrain
- 1x Small Terrain
- 1x Large Difficult Terrain"
fit_content = true
